--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=341
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://escenas/barraUp/barra_up.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://escenas/", "res://data/")
+dock_filesystem_selected_paths=PackedStringArray("res://data/data/data_enemigo.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://escenas/masmorras/", "res://escenas/masmorras/player/", "res://escenas/barra_superior/", "res://data/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://escenas/game/game.tscn", "res://escenas/tabs/tabs.tscn", "res://escenas/barraUp/barra_up.tscn", "res://escenas/energia/energia.tscn")
-current_scene="res://escenas/game/game.tscn"
+open_scenes=PackedStringArray("res://escenas/game/game.tscn", "res://escenas/tabs/tabs.tscn", "res://escenas/energia/energia.tscn", "res://escenas/masmorras/masmorras.tscn", "res://escenas/masmorras/player/player.tscn", "res://escenas/masmorras/enemigo/enemigo.tscn")
+current_scene="res://escenas/masmorras/player/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://escenas/barraUp/barra_up.gd", "res://data/data.gd", "res://data/data/data_energia.gd", "res://escenas/energia/energia.gd", "res://escenas/game/game.gd"]
-selected_script="res://escenas/game/game.gd"
-open_help=["Range"]
+open_scripts=["res://escenas/barra_superior/barra_superior.gd", "res://data/data.gd", "res://data/data/data_enemigo.gd", "res://data/data/data_energia.gd", "res://data/data/data_player.gd", "res://escenas/masmorras/enemigo/enemigo.gd", "res://escenas/energia/energia.gd", "res://escenas/game/game.gd", "res://escenas/masmorras/masmorras.gd", "res://escenas/masmorras/player/player.gd", "res://escenas/tabs/tab_estadisticas.gd"]
+selected_script="res://escenas/masmorras/player/player.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
