--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,10 +6,28 @@ list=Array[Dictionary]([{
 "path": "res://data/data.gd"
 }, {
 "base": &"Resource",
+"class": &"DataEnemigo",
+"icon": "",
+"language": &"GDScript",
+"path": "res://data/data/data_enemigo.gd"
+}, {
+"base": &"Resource",
 "class": &"DataEnergia",
 "icon": "",
 "language": &"GDScript",
 "path": "res://data/data/data_energia.gd"
+}, {
+"base": &"Resource",
+"class": &"DataPlayer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://data/data/data_player.gd"
+}, {
+"base": &"PanelContainer",
+"class": &"Enemigo",
+"icon": "",
+"language": &"GDScript",
+"path": "res://escenas/masmorras/enemigo/enemigo.gd"
 }, {
 "base": &"PanelContainer",
 "class": &"Energia",
@@ -17,9 +35,27 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://escenas/energia/energia.gd"
 }, {
+"base": &"PanelContainer",
+"class": &"Estadisticas",
+"icon": "",
+"language": &"GDScript",
+"path": "res://escenas/tabs/tab_estadisticas.gd"
+}, {
 "base": &"Control",
 "class": &"Game",
 "icon": "",
 "language": &"GDScript",
 "path": "res://escenas/game/game.gd"
+}, {
+"base": &"PanelContainer",
+"class": &"Masmorras",
+"icon": "",
+"language": &"GDScript",
+"path": "res://escenas/masmorras/masmorras.gd"
+}, {
+"base": &"PanelContainer",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://escenas/masmorras/player/player.gd"
 }])
