--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,7 +6,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -20,23 +20,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 7.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://escenas/barraUp/barra_up.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 63,
-"scroll_position": 36.0,
-"selection": false,
+"row": 10,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 9,
+"selection_to_column": 0,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,10 +35,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -60,6 +50,116 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://data/data/data_player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://escenas/tabs/tab_estadisticas.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 41,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 30,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 30,
+"selection_from_line": 30,
+"selection_to_column": 41,
+"selection_to_line": 30,
+"syntax_highlighter": "GDScript"
+}
+
+[res://escenas/barra_superior/barra_superior.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 14,
+"selection_from_line": 20,
+"selection_to_column": 23,
+"selection_to_line": 20,
+"syntax_highlighter": "GDScript"
+}
+
+[res://escenas/masmorras/masmorras.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://escenas/masmorras/player/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 15.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://escenas/masmorras/enemigo/enemigo.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 27.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 25,
+"selection_to_column": 0,
+"selection_to_line": 26,
+"syntax_highlighter": "GDScript"
+}
+
+[res://data/data/data_enemigo.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
